# SPL-CAT

./: Anchor.toml  Readme.md  package.json  run-test.sh
demo_scripts/: Keypair.json  main.ts  package.json  test.bash  xdapp.config.json
demo_scripts/scripts/: evm.ts  solana.ts
migrations/: deploy.sh
modules/wormhole-anchor-sdk/: Cargo.toml
modules/wormhole-anchor-sdk/src/wormhole/: accounts.rs
programs/CATSOL20/: Cargo.toml
programs/CATSOL20/src/: cat_struct.rs  constants.rs  context.rs  error.rs  lib.rs  utils.rs
programs/CATSOL20/src/actions/: bridge_in.rs  bridge_out.rs  initialize.rs  mint_tokens.rs  mod.rs  register_emitter.rs  transfer_ownership.rs
programs/CATSOL20/src/state/: config.rs  foreign_emitter.rs  received.rs  wormhole_emitter.rs
programs/CATSOL20Proxy/: Cargo.toml
programs/CATSOL20Proxy/src/: cat_struct.rs  constants.rs  context.rs  error.rs  lib.rs  utils.rs
programs/CATSOL20Proxy/src/actions/: bridge_in.rs  bridge_out.rs  initialize.rs  mod.rs  register_emitter.rs
programs/CATSOL20Proxy/src/state/: config.rs  foreign_emitter.rs  received.rs
programs/CATSOL721/: Cargo.toml
programs/CATSOL721/src/: cat_struct.rs  constants.rs  lib.rs
programs/CATSOL721/src/actions/: bridge_in.rs  bridge_out.rs  create_collection.rs  initialize.rs  mint_nft.rs  mint_tokens.rs  mod.rs  register_emitter.rs  transfer_ownership.rs
programs/CATSOL721/src/state/: config.rs
programs/TestToken/: Cargo.toml
programs/TestToken/src/: config.rs  context.rs  lib.rs
programs/spl_cat/: Cargo.toml
programs/spl_cat/src/: account.rs  cat_struct.rs  context.rs  error.rs  lib.rs  utils.rs
programs/spl_cat/src/state/: config.rs  received.rs
tests/: CATSOL20.ts  CATSOL20Proxy.ts  hello.ts  solxmint.ts  spl_cat.ts
tests/CATSOL20/: CATSOL20.ts  Test.toml  utils.ts
tests/CATSOL20Proxy/: CATSOL20Proxy.ts  Test.toml
tests/CATSOL721/: CATSOL721.ts  Test.toml
