[package]
name = "wormhole-anchor-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK using Anchor interfaces to interact with Wormhole Solana Programs"

[features]
mainnet = []
solana-devnet = []
tilt-devnet = []
token-bridge = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }