[package]
name = "cat_sol20_proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cat_sol20_proxy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mpl-token-metadata = { version = "1.13.0",  features = ["no-entrypoint"] }
anchor-spl = { version = "0.29.0", features=["metadata"] }
anchor-lang = { version = "0.29.0", features =["init-if-needed"]}
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features=["tilt-devnet"] }

