[package]
name = "spl_cat"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_cat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
hex = "0.4.3"
sha3 = "0.10.8"
winnow="=0.4.1"
byteorder = "1.4.3"
toml_datetime="=0.6.1"
solana-program = "=1.14.17"
getrandom = { version = "0.2.9", features = ["custom"] }
serde = { version = "1.0.164", features = ["derive"] }
primitive-types = { version = "0.12.1", default-features = false }
mpl-token-metadata = { version = "1.12.0",  features = ["no-entrypoint"] }
anchor-spl = { git = "https://github.com/hmzakhalid/anchor", features=["metadata"] }
anchor-lang = { git = "https://github.com/hmzakhalid/anchor", features =["init-if-needed"]}
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features=["tilt-devnet"] }
